--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
 @import url(fonts.css);
+@import url(normalize.css);
 @import url(global.css);
+@import url(header.css);
 @import url(about.css);
 @import url(help.css);
 @import url(contact.css);
