--- a/css/header.css
+++ b/css/header.css
@@ -1,4 +1,5 @@
 .header {
+  background-color: #fff;
   padding-top: 25px;
   padding-bottom: 27px;
 }
@@ -17,6 +18,11 @@
   height: 21px;
   cursor: pointer;
   margin-right: 150px;
+  transition: .2s;
+}
+
+.header__menu:hover {
+  opacity: .6;
 }
 
 .header__line {
