--- a/css/about.css
+++ b/css/about.css
@@ -8,6 +8,10 @@
   background: url('../image/about/pic.jpg') top right no-repeat;
 }
 
+.about__title {
+  font-size: 50px;
+}
+
 .about__info {
   margin-bottom: 30px;
 }
