--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 @import url(normalize.css);
 @import url(global.css);
 @import url(header.css);
+@import url(burger.css);
 @import url(hero.css);
 @import url(about.css);
 @import url(help.css);
