--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
 @import url(burger.css);
 @import url(hero.css);
 @import url(about.css);
+@import url(projects.css);
 @import url(help.css);
 @import url(contact.css);
 @import url(modal.css);
