Сверстал секцию наши питомцы для десктопа

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,11 +1,12 @@
-@import url(fonts.css);
-@import url(normalize.css);
-@import url(global.css);
-@import url(header.css);
-@import url(burger.css);
-@import url(hero.css);
-@import url(about.css);
-@import url(projects.css);
-@import url(help.css);
-@import url(contact.css);
-@import url(modal.css);
+@import 'fonts';
+@import 'normalize';
+@import 'global';
+@import 'header';
+@import 'burger';
+@import 'hero';
+@import 'about';
+@import 'projects';
+@import 'help';
+@import 'pets';
+@import 'contact';
+@import 'modal';
