--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,12 +1,12 @@
-@import 'fonts';
-@import 'normalize';
-@import 'global';
-@import 'header';
-@import 'burger';
-@import 'hero';
-@import 'about';
-@import 'projects';
-@import 'help';
-@import 'pets';
-@import 'contact';
-@import 'modal';
+@import 'components/fonts';
+@import 'components/normalize';
+@import 'components/global';
+@import 'components/header';
+@import 'components/burger';
+@import 'components/hero';
+@import 'components/about';
+@import 'components/projects';
+@import 'components/help';
+@import 'components/pets';
+@import 'components/contact';
+@import 'components/modal';
