--- a/src/scss/components/_fonts.scss
+++ b/src/scss/components/_fonts.scss
@@ -4,6 +4,7 @@
       url('../fonts/Comfortaa-Regular.woff2') format('woff2'),
       url('../fonts/Comfortaa-Regular.woff') format('woff');
       font-weight: 400;
+      display: swap;
 }
 
 @font-face {
@@ -12,6 +13,7 @@
       url('../fonts/HelveticaNeueCyr-Light.woff2') format('woff2'),
       url('../fonts/HelveticaNeueCyr-Light.woff') format('woff');
       font-weight: 300;
+      display: swap;
 }
 
 @font-face {
@@ -20,6 +22,7 @@
       url('../fonts/HelveticaNeueCyr-Roman.woff2') format('woff2'),
       url('../fonts/HelveticaNeueCyr-Roman.woff') format('woff');
       font-weight: 400;
+      display: swap;
 }
 
 @font-face {
@@ -28,4 +31,5 @@
       url('../fonts/HelveticaNeueCyr-Medium.woff2') format('woff2'),
       url('../fonts/HelveticaNeueCyr-Medium.woff') format('woff');
       font-weight: 500;
+      display: swap;
 }
