--- a/src/scss/components/_contact.scss
+++ b/src/scss/components/_contact.scss
@@ -133,3 +133,111 @@
   width: 73px;
   margin-bottom: 5px;
 }
+
+
+@media (max-width: 900px) {
+  .contact {
+    &__container {
+      max-width: 540px;
+    }
+    &__title {
+      font-size: 18px;
+      line-height: 24px;
+    }
+    &__text {
+      font-size: 14px;
+      line-height: 20px;
+      text-align: center;
+      display: inline-block;
+    }
+    &_orange {
+      display: inline-block;
+    }
+    &__contacts {
+      min-width: 400px;
+      margin-bottom: 33px;
+    }
+    &__link {
+      font-size: 14px;
+      line-height: 20px;
+    }
+  }
+  .form {
+    &__text {
+      text-align: center;
+      font-size: 14px;
+      line-height: 20px;
+    }
+    &__inputs {
+      margin-bottom: 20px;
+    }
+    &__wrap {
+      width: 200px;
+    }
+    &__label {
+      margin-bottom: 5px;
+    }
+  }
+}
+
+@media (max-width: 600px) {
+  .contact {
+    &__container {
+      padding: 30px;
+      max-width: 270px;
+    }
+    &__title {
+      font-size: 16px;
+      line-height: 22px;
+    }
+    &__text {
+      font-size: 14px;
+      line-height: 20px;
+      margin-bottom: 10px;
+    }
+    &__contacts {
+      flex-direction: column;
+      gap: 15px;
+      min-width: 200px;
+      margin-bottom: 33px;
+    }
+    &__link {
+      font-size: 14px;
+      line-height: 20px;
+      padding-left: 0;
+      text-align: center;
+    }
+    &__phone {
+      &:before {
+        left: 15px;
+      }
+    }
+    &__email {
+      padding-left: 32px;
+      &:before {
+        left: 0;
+      }
+    }
+    
+  }
+  .form {
+    &__inputs {
+      flex-direction: column;
+      gap: 14px;  
+      margin-bottom: 20px;
+    }
+    &__wrap {
+      &_phone {
+        margin-right: 0;
+      }
+    }
+    &__label {
+      font-size: 8px;
+      line-height: 10px;
+    }
+    &__button {
+      align-self: center;
+    }
+  }
+}
+
