--- a/src/scss/components/_about.scss
+++ b/src/scss/components/_about.scss
@@ -5,7 +5,7 @@
 .about__container {
   display: flex;
   flex-direction: column;
-  background: url('../image/about/pic.jpg') top right no-repeat;
+  
 }
 
 .about__title {
@@ -13,6 +13,89 @@
 }
 
 .about__info {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-content: space-between;
+  max-height: 580px;
   margin-bottom: 30px;
+}
+
+.about__text {
+  display: block;
+  max-width: 480px;
+}
+
+.about__image {
+  width: 580px;
+  height: 330px;
+  background: url('../image/about/pic.jpg') top right / contain no-repeat;
+}
+
+@media (max-width: 1200px) {
+  .about {
+    padding: 70px 0px 30px;
+    &__title {
+      font-size: 44px;
+      line-height: 54px;
+    }
+    &__text {
+      font-size: 18px;
+      line-height: 26px;
+      max-width: 380px;
+    }
+  }
+}
+
+@media (max-width: 1080px) {
+  .about {
+    padding: 60px 0 30px;
+    &__container {
+      height: 100%;
+    }
+    &__title {
+      font-size: 30px;
+      line-height: 34px;
+      margin-bottom: 20px;
+    }
+    &__text {
+      font-size: 14px;
+      line-height: 20px;
+    }
+    &__info {
+      display: flex;
+      flex-direction: column;
+      flex-wrap: nowrap;
+    }
+    &__text {
+      max-width: 100%;
+    }
+    &__image {
+      width: 100%;
+      background-position: center;
+    }
+  }
+}
+
+@media (max-width: 550px) {
+  .about {
+    padding: 30px 0px 15px;
+    &__title {
+      font-size: 20px;
+      line-height: 24px;
+      margin-bottom: 10px;
+    }
+    &__image {
+      width: 100%;
+      height: 174px;
+    }
+    &__info {
+      margin-bottom: 15px;
+    }
+    &__link {
+      font-size: 14px;
+      line-height: 20px;
+    }
+  }
 }
 
