--- a/src/scss/components/_projects.scss
+++ b/src/scss/components/_projects.scss
@@ -13,10 +13,13 @@
 
 .projects__title {
   grid-area: title;
+  font-size: 50px;
+  line-height: 60px;
 }
 
 .projects__list {
-  display: grid;
+  display: flex;
+  flex-direction: column;
   grid-area: list;
   gap: 30px;
 }
@@ -143,4 +146,256 @@
 
 .projects__info_project:nth-child(12) {
   grid-area: twelfth;
+}
+
+.projects__info_link {
+  display: none;
+}
+
+@media (max-width: 1200px) {
+  .projects {
+    padding: 70px 0;
+    &__title {
+      font-size: 44px;
+      line-height: 54px;
+    }
+    &__image {
+      max-width: 200px;
+    }
+    &__item {
+      max-width: 580px;
+      &_title {
+        font-size: 24px;
+        line-height: 30px;
+        margin-bottom: 7px;
+      }
+      
+      &_text {
+        font-size: 18px;
+        line-height: 26px;
+        margin-bottom: 13px;
+      }
+      
+      &_link {
+        font-size: 18px;
+        line-height: 24px;
+      }
+    }
+    &__info {
+      max-width: 280px;
+      gap: 33px;
+      &_text {
+        font-size: 18px;
+        line-height: 24px;
+        margin-bottom: -14px;
+      }
+      &_project:nth-child(7),
+      &_project:nth-child(8),
+      &_project:nth-child(9),
+      &_project:nth-child(10),
+      &_project:nth-child(11),
+      &_project:nth-child(12) {
+        display: none;
+      }
+      &_link {
+        display: block;
+        grid-area: more__link;
+        text-align: right;
+        margin-top: -10px;
+      }
+    }
+    &__more {
+      display: grid;
+      gap: 20px;
+      grid-template-areas: 
+      "more__title more__title more__title"
+      "first second third"
+      "fourth fifth sixth"
+      "more__link more__link more__link";
+    }
+
+  }
+  .article {
+    width: 280px;
+    height: 332px;
+    padding: 10px 10px 45px;
+    background: url('../image/projects/best_friend.jpg') center / contain no-repeat;
+    &__link {
+      position: absolute;
+      bottom: 15px;
+      right: 10px;
+    }
+    &__text {
+      font-size: 24px;
+      line-height: 30px;
+    }
+  }
+}
+
+@media (max-width: 1024px) {
+  .projects {
+    padding: 60px 0;
+    &__container {
+      justify-content: space-evenly;
+    }
+    &__title {
+      font-size: 30px;
+      line-height: 34px;
+    }
+    &__image {
+      max-width: 160px;
+    }
+    &__list {
+      gap: 20px;
+    }
+    &__item {
+      max-width: 400px;
+      gap: 10px;
+      &_title {
+        font-size: 18px;
+        line-height: 24px;
+        margin-bottom: 3px;
+      }
+      
+      &_text {
+        font-size: 14px;
+        line-height: 20px;
+        margin-bottom: 13px;
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 2;
+        text-overflow: ellipsis;
+        overflow: hidden;
+      }
+      &_link {
+        font-size: 14px;
+        line-height: 20px;
+      }
+      &__more {
+        grid-template-areas: 
+        "more__title more__title more__title"
+        "first second third"
+        "fourth fifth sixth"
+        "more__link more__link more__link";
+      }
+    }
+    &__info {
+      max-width: 220px;
+      gap: 20px;
+      &_text {
+        font-size: 14px;
+        line-height: 20px;
+      }
+      &_link {
+        font-size: 14px;
+        line-height: 20px;
+        margin-top: -15px;
+      }
+      &_pic {
+        width: 60px;
+        height: 52px;
+      }
+    }
+
+  }
+  .article {
+    width: 220px;
+    height: 271px;
+    padding: 10px 10px 39px;
+    &__link {
+      font-size: 14px;
+      line-height: 20px;
+      bottom: 15px;
+      right: 10px;
+    }
+    &__text {
+      font-size: 18px;
+      line-height: 24px;
+    }
+  }
+}
+
+@media (max-width: 700px) {
+  .projects {
+    padding: 40px 0;
+    &__container {
+      justify-items: center;
+      grid-template-areas: 
+        "title"
+        "list"
+        "info";
+    }
+    &__list {
+      gap: 20px;
+      margin-bottom: 30px;
+    }
+  }
+}
+
+@media (max-width: 480px) {
+  .projects {
+    padding: 40px 0;
+    &__title {
+      font-size: 20px;
+      line-height: 24px;
+      margin-bottom: 20px;
+    }
+    &__image {
+      max-width: 130px;
+    }
+    &__item {
+      max-width: 270px;
+      gap: 10px;
+      &_title {
+        font-size: 16px;
+        line-height: 22px;
+        margin-bottom: 10px;
+      }
+      
+      &_text {
+        font-size: 14px;
+        line-height: 20px;
+        margin-bottom: 17px;
+      }
+    }
+    &__more {
+      grid-template-areas: 
+      "more__title more__title more__title more__title"
+      "first second third fourth"
+      "more__link more__link more__link more__link";
+      gap: 10px;
+    }
+    &__info {
+      max-width: 270px;
+      gap: 30px;
+      &_text {
+        font-size: 14px;
+        line-height: 20px;
+        margin-bottom: 0;
+      }
+      &_link {
+        font-size: 14px;
+        line-height: 20px;
+        margin-top: 0;
+      }
+      &_pic {
+        width: 60px;
+        height: 52px;
+      }
+      &_project:nth-child(5),
+      &_project:nth-child(6) {
+        display: none;
+      }
+    }
+
+  }
+  .article {
+    width: 270px;
+    height: 320px;
+    padding: 10px 10px 50px;
+    &__text {
+      font-size: 16px;
+      line-height: 22px;
+    }
+  }
 }
