адаптив для секции наши питомцы

--- a/src/scss/components/_contact.scss
+++ b/src/scss/components/_contact.scss
@@ -180,6 +180,7 @@
 
 @media (max-width: 600px) {
   .contact {
+    padding-top: 20px;
     &__container {
       padding: 30px;
       max-width: 270px;
