--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,6 +1,6 @@
 @import 'components/fonts';
 @import 'components/normalize';
-@import 'libs/swiper-bundle.min';
+@import 'components/slider';
 @import 'components/global';
 @import 'components/header';
 @import 'components/burger';
