--- a/src/scss/components/_global.scss
+++ b/src/scss/components/_global.scss
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  scroll-behavior: smooth;
 }
 
 html {
@@ -109,8 +110,10 @@ img {
 }
 
 .button:hover img,
-.button:active img {
+.button:active img,
+.button:focus img {
   filter: drop-shadow(0px 4px 6px);
+  outline: none;
 }
 
 .link {
