--- a/src/scss/components/_help.scss
+++ b/src/scss/components/_help.scss
@@ -28,13 +28,13 @@
   }
 }
 
-.help__money_pics {
+.help__money-pics {
   display: grid;
   grid-template-areas: 
   "rebbit dog2"
   "dog dog2";
   gap: 20px;
-  .help__item_pic {
+  .help__item-pic {
     &:nth-child(1) {
       grid-area: rebbit;
     }
@@ -47,13 +47,13 @@
   }
 }
 
-.help__conservator_pics {
+.help__conservator-pics {
   display: grid;
   grid-template-areas: 
   "cat cat_and_hand"
   "cat man_and_dog";
   gap: 20px;
-  .help__item_pic {
+  .help__item-pic {
     &:nth-child(1) {
       grid-area: cat;
     }
@@ -102,12 +102,12 @@
 
 .help__volunteer {
   max-width: 570px;
-  &_pics {
+  &-pics {
     order: 0;
   }
 }
 
-.volunteer__title {
+.volunteer-title {
   position: relative;
   margin-bottom: 50px;
   font-family: HelveticaNeueCyr;
@@ -118,7 +118,7 @@
   padding-left: 102px;
 }
 
-.volunteer__title:before {
+.volunteer-title:before {
   position: absolute;
   display: flex;
   justify-content: center;
@@ -195,7 +195,7 @@
   max-height: 580px;
 }
 
-.help__volunteer_wrap {
+.help__volunteer-wrap {
   display: flex;
   justify-content: space-between;
   flex-direction: row-reverse;
@@ -222,10 +222,10 @@
     }
     &__volunteer {
       max-width: 480px;
-      &_pics {
+      &-pics {
         max-width: 400px;
         height: 349px;
-        .help__item_pic {
+        .help__item-pic {
           width: 100%;
           height: 349px;
           overflow: hidden;
@@ -233,10 +233,10 @@
       }
     }
     &__conservator {
-      &_pics {
+      &-pics {
         padding-top: 100px;
         gap: 12px 20px;
-        .help__item_pic:nth-child(1) {
+        .help__item-pic:nth-child(1) {
           max-width: 180px;
           height: 244px;
           overflow: hidden;
@@ -244,8 +244,8 @@
             max-width: 100%;
           }
         }
-        .help__item_pic:nth-child(2),
-        .help__item_pic:nth-child(3) {
+        .help__item-pic:nth-child(2),
+        .help__item-pic:nth-child(3) {
           max-width: 180px;
           height: 117px;
           img {
@@ -254,8 +254,8 @@
         }
       }
     }
-    &__money_pics {
-      .help__item_pic {
+    &__money-pics {
+      .help__item-pic {
         &:nth-child(3) {
           overflow: hidden;
           max-width: 280px;
@@ -325,14 +325,14 @@
       padding-left: 80px;
       max-width: unset;
       width: 100%;
-      &_wrap {
+      &-wrap {
         flex-direction: column;
       }
-      &_pics {
+      &-pics {
         width: 100%;
         max-width: unset;
         height: auto;
-        .help__item_pic {
+        .help__item-pic {
           height: auto;
         }
       }
@@ -340,16 +340,16 @@
     &__conservator {
       padding-left: 0;
       padding-top: 0;
-      &_pics {
+      &-pics {
         padding-top: 0;
         gap: 20px;
         max-width: 700px;
-        .help__item_pic:nth-child(1) {
+        .help__item-pic:nth-child(1) {
           max-width: 300px;
           height: unset;
         }
-        .help__item_pic:nth-child(2),
-        .help__item_pic:nth-child(3) {
+        .help__item-pic:nth-child(2),
+        .help__item-pic:nth-child(3) {
           max-width: 380px;
           height: auto;
         }
@@ -361,10 +361,10 @@
       font-size: 14px;
       line-height: 20px;
     }
-    &__money_pics {
+    &__money-pics {
       gap: 20px;
       max-width: 700px;
-      .help__item_pic {
+      .help__item-pic {
         &:nth-child(1) {
           max-width: 300px;
         }
@@ -463,7 +463,7 @@
     }
     &__volunteer {
       padding-left: 50px;
-      &_pics {
+      &-pics {
         width: 270px;
         margin: 0 auto;
       }
@@ -471,11 +471,11 @@
     &__conservator {
       padding-left: 0;
       padding-top: 0;
-      &_pics {
+      &-pics {
         display: flex;
         overflow-x: auto;
         gap: 10px;
-        .help__item_pic {
+        .help__item-pic {
           height: 160px;
           &:nth-child(1) {
             height: 160px;
@@ -504,11 +504,11 @@
     &__text {
       padding-left: 50px;
     }
-    &__money_pics {
+    &__money-pics {
       display: flex;
       gap: 10px;
       overflow-x: auto;
-      .help__item_pic {
+      .help__item-pic {
         height: 131px;
         &:nth-child(3) {
           overflow: unset;
@@ -529,7 +529,7 @@
     }
   }
   .money__title,
-  .volunteer__title,
+  .volunteer-title,
   .conservator__title {
     font-size: 18px;
     line-height: 24px;
