--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,3 +1,4 @@
+@import 'components/variables';
 @import 'components/fonts';
 @import 'components/normalize';
 @import 'components/slider';
@@ -10,4 +11,5 @@
 @import 'components/help';
 @import 'components/pets';
 @import 'components/contact';
+@import 'components/footer';
 @import 'components/modal';
