--- a/src/scss/components/_global.scss
+++ b/src/scss/components/_global.scss
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   scroll-behavior: smooth;
+  outline-color: $main;
 }
 
 html {
@@ -37,6 +38,10 @@ ul {
   list-style: none;
   padding: 0;
   margin: 0;
+}
+
+picture {
+  display: block;
 }
 
 img {
